# src/modules/people/infra/typeorm/entities/PersonAddress.ts
@@ -13,7 +13,7 @@ class PersonAddress {
   id: string;
 
   @Column()
-  cep: string;
+  postal_code: string;
 
   @Column()
   street: string;
